--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header nav ul li a {
 }
 
 .about-text {
-  text-align: justify;
+  text-align: center;
   margin-top: 30px;
 }
 
@@ -81,7 +81,7 @@ header nav ul li a {
 /* Projects Section Styles */
 .section#projects {
   padding: 80px 0;
-  background-color: #499ffa;
+  background-color: #f5f5f5;
   margin: 10px;
   list-style: none;
 }
@@ -93,7 +93,7 @@ header nav ul li a {
 
 /* Footer Styles */
 footer {
-  background-color: #f5f5f5;
+  background-color: #499ffa;
   padding: 20px 0;
   text-align: center;
   color: #333;
