--- a/style.css
+++ b/style.css
@@ -79,11 +79,21 @@ header nav ul li a {
 }
 
 /* Projects Section Styles */
+/* Projects Section Styles */
 .section#projects {
   padding: 80px 0;
   background-color: #f5f5f5;
-  margin: 10px;
+  margin: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.section#projects ul li a {
   list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* Contact Section Styles */
