--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ header nav ul li a {
   list-style: none;
   margin: 0px;
   padding: 0px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 /* Contact Section Styles */
