--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header nav ul li a {
 
 .about-text {
   text-align: center;
-  margin-top: 30px;
+  margin: 20px;
 }
 
 /* Experience Section Styles */
@@ -76,6 +76,7 @@ header nav ul li a {
 }
 .experience-text {
   text-align: center; /* center the text */
+  margin: 20px;
 }
 
 /* Projects Section Styles */
