--- a/style.css
+++ b/style.css
@@ -96,9 +96,8 @@ header nav ul li a {
 /* Projects Section Styles */
 .section#projects {
   padding: 0px;
-  padding-bottom: 130px;
   background-color: #d5d5d59d;
-  margin: 100px 300px 0 300px;
+  margin: 100px 300px 200px 300px;
   display: flex;
   align-items: center;
   justify-content: center;
